fixes and improvements

--- a/src/sass/_chat.sass
+++ b/src/sass/_chat.sass
@@ -12,7 +12,7 @@
   &__settings
     transition: color 0.6s
     cursor: pointer
-    width: 100px
+    width: 90px
     height: 32px
     border: 1px solid black
     display: flex
@@ -21,10 +21,22 @@
     &:hover
       border: 1px solid rgba(61, 97, 239, 0.7)
       color: rgba(61, 97, 239, 0.7)
+  &__enter
+    transition: color 0.6s
+    cursor: pointer
+    width: 90px
+    height: 32px
+    border: 1px solid black
+    display: flex
+    justify-content: center
+    align-items: center
+    &:hover
+      border: 1px solid  rgba(80, 201, 103, 0.8)
+      color:  rgba(80, 201, 103, 0.8)
   &__exit
     transition: color 0.6s
     cursor: pointer
-    width: 100px
+    width: 90px
     height: 32px
     border: 1px solid black
     display: flex
