--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,7 +46,7 @@ body {
 .chat__settings {
   transition: color 0.6s;
   cursor: pointer;
-  width: 100px;
+  width: 90px;
   height: 32px;
   border: 1px solid black;
   display: flex;
@@ -57,10 +57,24 @@ body {
   border: 1px solid rgba(61, 97, 239, 0.7);
   color: rgba(61, 97, 239, 0.7);
 }
+.chat__enter {
+  transition: color 0.6s;
+  cursor: pointer;
+  width: 90px;
+  height: 32px;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.chat__enter:hover {
+  border: 1px solid rgba(80, 201, 103, 0.8);
+  color: rgba(80, 201, 103, 0.8);
+}
 .chat__exit {
   transition: color 0.6s;
   cursor: pointer;
-  width: 100px;
+  width: 90px;
   height: 32px;
   border: 1px solid black;
   display: flex;
