--- a/style.css
+++ b/style.css
@@ -1,396 +1,32 @@
-/* Reset and base styles */
-
-* {
-  padding: 0px;
-  margin: 0px;
-  border: none;
+.calculator {
+    width: 1143px;
+    height: 1000px;
+    border-radius: 103px;
+    background: #fff;
+    margin: 0 auto;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Links */
-a,
-a:visited,
-a:hover {
-  color: inherit;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:focus,
-a:active {
-  outline: none;
-}
-
-/* Common */
-aside,
-nav,
-footer,
-header,
-section,
-main {
-  display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-ul {
-  list-style: none;
-}
-
-img,
-svg {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-/* Form */
-input,
-textarea,
-button,
-select {
-  font-family: inherit;
-  font-size: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button,
-input[type="submit"] {
-  display: inline-block;
-  box-shadow: none;
-  background-color: transparent;
-  background: none;
-  cursor: pointer;
-}
-
-input:focus,
-input:active,
-button:focus,
-button:active {
-  outline: none;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-label {
-  cursor: pointer;
-}
-
-legend {
-  display: block;
+.numbers {
+    height: 100%;
+    width: 342px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto; 
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #323232;
-  font-size: 16px;
-  line-height: 1.6875;
-  text-rendering: optimizeSpeed;
-  -webkit-font-smoothing: antialiased;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+    background: #000;
 }
 
-/* Grid styles */
-.container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 24px;
-  padding-right: 24px;
-}
-.content__wrapper {
-  overflow-y: auto;
+.number {
+    width: 95px;
 }
 
-html,
-body {
-  height: 100%;
-  scroll-behavior: smooth;
+.operation {
+    width: 39px;
 }
 
-/* Center content */
-body {
-  width: 375px;
-  background-color: #fdfdfd;
-}
-
-.header {
-  padding: 15px 0;
-  background-color: #fff;
-  border-bottom: 1px solid #d6ece8;
-}
-
-.header__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.inline-button {
-  border-radius: 12px;
-  color: #24786d;
-  padding: 10px 16px;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  transition: color 0.2s ease-in;
-}
-
-.inline-button:active {
-  color: #4ec0b3;
-}
-
-.content__wrapper::-webkit-scrollbar {
-  width: 0;
-}
-
-.content {
-  position: relative;
-  height: calc(100vh - 164px);
-  display: flex;
-  flex-direction: column-reverse;
-  background-color: #fdfdfd;
-}
-
-.message {
-  width: fit-content;
-  margin: 0 0 15px;
-  padding: 8px 12px;
-  max-width: 240px;
-  font-family: "Nunito", sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-}
-
-.message p {
-  word-wrap: break-word;
-  white-space: pre-wrap;
-}
-
-.message--user-me {
-  background-color: #20a090;
-  color: #fff;
-  border-radius: 12px 0 12px 12px;
-  margin-left: auto;
-}
-
-.message--interlocutor {
-  background-color: #f2f7fb;
-  color: #000e08;
-  border-radius: 0 12px 12px 12px;
-}
-.message__user {
-  font-size: 12px;
-  text-transform: capitalize;
-  font-weight: 700;
-  color: #ea3736;
-}
-
-.message__delivery-time {
-  text-align: end;
-  font-size: 10px;
-}
-
-.message--interlocutor .message__delivery-time {
-  color: #797c7b;
-}
-
-.message--user-me .message__delivery-time {
-  color: #b9ece7;
-}
-
-.texting-area {
-  padding: 20px 0;
-  background-color: #fff;
-  border-top: 1px solid #d6ece8;
-}
-
-.texting-area__wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.input-message {
-  min-width: 270px;
-  height: 50px;
-  padding: 14px;
-  background: #f3f6f6;
-  border-radius: 12px;
-  font-family: "Nunito", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #0f0c22;
-
-  resize: none;
-  outline: none;
-}
-
-.input-message::-webkit-scrollbar {
-  width: 0;
-}
-
-.input::placeholder {
-  color: #797c7b;
-}
-
-.round-button {
-  flex-shrink: 0;
-  padding: 8px 6px 8px 10px;
-  background-color: #20a090;
-  border-radius: 50%;
-}
-
-.round-button:active {
-  position: relative;
-  top: 1px;
-}
-
-.message--sent {
-  background-color: #4ec0b3;
-}
-
-.none {
-  display: none;
-}
-
-/* Modals */
-
-.modal__window {
-  min-width: 320px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  padding: 30px 25px 35px;
-  border-radius: 20px;
-  font-family: "Nunito", sans-serif;
-  font-weight: 500px;
-  color: #000e08;
-  background-color: #fff;
-}
-
-.fade-block {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 14, 8, 0.5);
-  opacity: 1;
-  transition: opacity 0.3s ease-in, visibility 0s linear;
-}
-
-.modal__header {
-  margin: 0 0 50px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.title {
-  font-weight: 700;
-  color: #20a090;
-  font-size: 18px;
-}
-
-.subtitle {
-  margin: 0 0 10px;
-}
-
-.button {
-  display: block;
-  padding: 10px 15px;
-  background-color: #20a090;
-  color: #fff;
-  border-radius: 10px;
-  transition: 0.2s ease-in;
-}
-
-.button:active {
-  background-color: #4ec0b3;
-}
-
-.modal__input {
-  width: 100%;
-  margin: 0 0 60px;
-  padding: 14px;
-  background: #f3f6f6;
-  border-radius: 12px;
-  color: #0f0c22;
-}
-.input-data {
-  position: relative;
-}
-
-.modal__warning {
-  position: absolute;
-  top: 95px;
-  font-size: 12px;
-  color: #ea3736;
-}
-
-#modal-name .modal__warning {
-  top: 60px;
-}
-
-.modal__input::placeholder {
-  color: #797c7b;
-}
-
-#modal-name .input-data {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 0 60px;
-  column-gap: 20px;
-}
-
-#modal-name .modal__input {
-  margin: 0;
-}
-
-.hidden {
-  /* display: none; */
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.3s ease-in, visibility 0s linear 500ms;
-}
-
-/* scroll down */
-
-.scroll-down {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding: 8px;
-  margin: 0 5px 5px 0;
-  background-color: #a1a4a3;
-  border-radius: 50%;
-}
-
-.messages-warning {
-  margin: 15px 0;
-  font-size: 14px;
-  color: #797C7B;
-  text-align: center;
+.operation-result {
+    cursor: pointer;
 }
