--- a/chat/scss/app.scss
+++ b/chat/scss/app.scss
@@ -67,9 +67,9 @@
 		height: 100%;
 		overflow-y: auto;
 
-		&::-webkit-scrollbar {
-			width: 0;
-		}
+		// &::-webkit-scrollbar {
+		// 	width: 0;
+		// }
 
 		.message {
 			margin-top: 3px;
