--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ button {
 }
 
 .wrapper {
+    position: relative;
     background-color: #fff;
     width: 320px;
     height: 533px;
@@ -48,6 +49,7 @@ button {
 }
 
 .popup {
+    z-index: 1;
     width: 273px;
     height: 319px;
     border: 1px solid #000;
@@ -200,4 +202,29 @@ button {
     margin: 10px auto;
     color: red;
     font-size: large;
+}
+
+.toTheBeginingButtonHolder {
+    position: absolute;
+    bottom: 65px;
+    left: 25px;
+    width: 36px;
+    height: 36px;
+}
+
+.toTheBeginingButton {
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    background-color: #b6b6b6;
+    /* background: no-repeat; */
+    opacity: 40%;
+    transition: all .3s;
+    padding-left: 2px;
+    padding-top: 2px;
+}
+
+.toTheBeginingButton:hover {
+    opacity: 90%;
 }
