--- a/css/style.css
+++ b/css/style.css
@@ -44,27 +44,26 @@ body {
     border: 1px solid #000;
     padding: 10px;
     margin-bottom: 8px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 440px;
-    -ms-overflow-style: none;
-        scrollbar-width: none;
+
 }
 
-.message-screen::-webkit-scrollbar {
+.message-list::-webkit-scrollbar {
     width: 0;
     height: 0;
 }
 
 .message-list {
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-end;
-    align-content: stretch;
-    align-items: flex-start;
-    min-height: 440px;
+    flex-direction: column-reverse;
+     flex-wrap: nowrap;
 
+    align-content: stretch;
+     align-items: flex-start;
+     min-height: 440px;
+    overflow: auto;
+    height: 440px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
 }
 
